Add tests for repositories, mappers, service and controllers